img-wrapper-in-center-need-fix-align-method

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
 }
 
 #gallery-wrapper {
+  position: relative;
   width:780px;
   border: 1px solid;
   border-color: #dbd9ca;
@@ -21,6 +22,13 @@ body {
   -moz-border-radius: 10px;
   margin:5px;
   padding:5px;
+}
+
+/* need to fix text-align center for a better method! */
+#thumb-wrapper {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 h1 {
@@ -31,8 +39,8 @@ h1 {
   font-family: "Arial", "Verdana", Sans-serif;
 }
 
+
 img {
-  display: inline-block;
   width: auto;
   height: auto;
   max-width: 100px;
